# packages/openapi/api/src/models/ButtonField.ts
@@ -1,0 +1,56 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Iron Plans API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+/**
+ *
+ * @export
+ * @interface ButtonField
+ */
+export interface ButtonField {
+  /**
+   *
+   * @type {string}
+   * @memberof ButtonField
+   */
+  text: string
+}
+
+export function ButtonFieldFromJSON(json: any): ButtonField {
+  return ButtonFieldFromJSONTyped(json, false)
+}
+
+export function ButtonFieldFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): ButtonField {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    text: json['text'],
+  }
+}
+
+export function ButtonFieldToJSON(value?: ButtonField | null): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    text: value.text,
+  }
+}
