# packages/openapi/api/src/models/ContactAction.ts
@@ -1,0 +1,56 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Iron Plans API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+/**
+ * Base serializer for all actions.
+ * @export
+ * @interface ContactAction
+ */
+export interface ContactAction {
+  /**
+   *
+   * @type {string}
+   * @memberof ContactAction
+   */
+  url: string
+}
+
+export function ContactActionFromJSON(json: any): ContactAction {
+  return ContactActionFromJSONTyped(json, false)
+}
+
+export function ContactActionFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): ContactAction {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    url: json['url'],
+  }
+}
+
+export function ContactActionToJSON(value?: ContactAction | null): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    url: value.url,
+  }
+}
