# packages/openapi/api/src/models/ContactActionRequest.ts
@@ -1,0 +1,58 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Iron Plans API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+/**
+ * Base serializer for all actions.
+ * @export
+ * @interface ContactActionRequest
+ */
+export interface ContactActionRequest {
+  /**
+   *
+   * @type {string}
+   * @memberof ContactActionRequest
+   */
+  url: string
+}
+
+export function ContactActionRequestFromJSON(json: any): ContactActionRequest {
+  return ContactActionRequestFromJSONTyped(json, false)
+}
+
+export function ContactActionRequestFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): ContactActionRequest {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    url: json['url'],
+  }
+}
+
+export function ContactActionRequestToJSON(
+  value?: ContactActionRequest | null
+): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    url: value.url,
+  }
+}
