# packages/openapi/api/src/models/PlanOption.ts
@@ -1,0 +1,87 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Iron Plans API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+import {
+  BillPeriodEnum,
+  BillPeriodEnumFromJSON,
+  BillPeriodEnumFromJSONTyped,
+  BillPeriodEnumToJSON,
+} from './'
+
+/**
+ *
+ * @export
+ * @interface PlanOption
+ */
+export interface PlanOption {
+  /**
+   *
+   * @type {string}
+   * @memberof PlanOption
+   */
+  id: string
+  /**
+   *
+   * @type {string}
+   * @memberof PlanOption
+   */
+  planId: string
+  /**
+   *
+   * @type {BillPeriodEnum}
+   * @memberof PlanOption
+   */
+  billPeriod: BillPeriodEnum
+  /**
+   *
+   * @type {number}
+   * @memberof PlanOption
+   */
+  priceCents: number
+}
+
+export function PlanOptionFromJSON(json: any): PlanOption {
+  return PlanOptionFromJSONTyped(json, false)
+}
+
+export function PlanOptionFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): PlanOption {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    id: json['id'],
+    planId: json['plan_id'],
+    billPeriod: BillPeriodEnumFromJSON(json['bill_period']),
+    priceCents: json['price_cents'],
+  }
+}
+
+export function PlanOptionToJSON(value?: PlanOption | null): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    id: value.id,
+    plan_id: value.planId,
+    bill_period: BillPeriodEnumToJSON(value.billPeriod),
+    price_cents: value.priceCents,
+  }
+}
