# packages/openapi/api/src/models/PlanState.ts
@@ -1,0 +1,72 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Iron Plans API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+import {
+  PlanActions,
+  PlanActionsFromJSON,
+  PlanActionsFromJSONTyped,
+  PlanActionsToJSON,
+} from './'
+
+/**
+ * State of a plan, including possible actions and other caller context.
+ * Currently, only available to authenticated customers, support for public
+ * plans is...planned >_>
+ * @export
+ * @interface PlanState
+ */
+export interface PlanState {
+  /**
+   *
+   * @type {PlanActions}
+   * @memberof PlanState
+   */
+  actions: PlanActions
+  /**
+   *
+   * @type {number}
+   * @memberof PlanState
+   */
+  readonly trialDays: number
+}
+
+export function PlanStateFromJSON(json: any): PlanState {
+  return PlanStateFromJSONTyped(json, false)
+}
+
+export function PlanStateFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): PlanState {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    actions: PlanActionsFromJSON(json['actions']),
+    trialDays: json['trial_days'],
+  }
+}
+
+export function PlanStateToJSON(value?: PlanState | null): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    actions: PlanActionsToJSON(value.actions),
+  }
+}
