# packages/openapi/api/src/models/PlanStateRequest.ts
@@ -1,0 +1,65 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Iron Plans API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+import {
+  PlanActionsRequest,
+  PlanActionsRequestFromJSON,
+  PlanActionsRequestFromJSONTyped,
+  PlanActionsRequestToJSON,
+} from './'
+
+/**
+ * State of a plan, including possible actions and other caller context.
+ * Currently, only available to authenticated customers, support for public
+ * plans is...planned >_>
+ * @export
+ * @interface PlanStateRequest
+ */
+export interface PlanStateRequest {
+  /**
+   *
+   * @type {PlanActionsRequest}
+   * @memberof PlanStateRequest
+   */
+  actions: PlanActionsRequest
+}
+
+export function PlanStateRequestFromJSON(json: any): PlanStateRequest {
+  return PlanStateRequestFromJSONTyped(json, false)
+}
+
+export function PlanStateRequestFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): PlanStateRequest {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    actions: PlanActionsRequestFromJSON(json['actions']),
+  }
+}
+
+export function PlanStateRequestToJSON(value?: PlanStateRequest | null): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    actions: PlanActionsRequestToJSON(value.actions),
+  }
+}
